fix: overflow nabar right

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 .nav-area {
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    justify-content: space-between;
 }
 
 .logo {
@@ -22,7 +22,8 @@
 }
 
 .nav-container {
-    width: 100%;
+    /* width: 100%; */
+    margin-right: 1.2rem;
     margin-top: 10px;
     /* height: 100vh; */
     display: flex;
@@ -46,6 +47,7 @@ nav ul li {
     cursor: pointer;
     position: relative;
 }
+
 nav ul li a {
     text-decoration: none;
     color: black;
@@ -70,7 +72,7 @@ nav ul li:hover:after {
     display: none;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     nav {
         padding: 5px 10px;
     }
